# genshin-impact-extractors

./: .gitignore  README.md  __init__.py  avatar_extractor.py  book_extractor.py  extract_all.py  pyproject.toml  quest_dialogue_extractor.py  reliquary_extractor.py  run.py  utils.py  weapon_extractor.py
src/: __init__.py
src/cli/: __init__.py  main.py
src/core/: __init__.py  config.py  io.py  story_extractor.py  text_parser.py
src/extractors/: __init__.py  base.py
src/extractors/avatar/: __init__.py  data_loader.py  extractor.py  info_extractor.py  story_extractor.py  voice_extractor.py
src/extractors/book/: __init__.py  data_loader.py  extractor.py  info_extractor.py  series_extractor.py  type_checker.py
src/extractors/quest/: __init__.py  data_loader.py  dialog_builder.py  extractor.py  quest_processor.py  role_resolver.py
src/extractors/reliquary/: __init__.py  data_loader.py  extractor.py  info_extractor.py  set_extractor.py
src/extractors/weapon/: __init__.py  data_loader.py  extractor.py  info_extractor.py
src/models/: __init__.py  constants.py  field_maps.py
